# git-hunk

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml  publish.yml  test.yml
docs/adr/: 0001-json-v2-hunk-schema.md
git_hunk/: __init__.py  __main__.py  _cli.py  _git.py  _hunk.py  _lines.py  _patch.py  _skills.py  _ui.py  cli.py  git.py  hunk.py  lines.py  patch.py  ui.py
git_hunk/skills/core/: SKILL.md
skills/git-hunk/: SKILL.md
tests/: conftest.py  test_lines.py  test_split.py
tests/e2e/: binary_test.py  commit_test.py  conftest.py  discard_test.py  dry_run_test.py  error_test.py  help_test.py  line_selection_test.py  list_test.py  markup_test.py  module_entry_test.py  no_newline_test.py  non_utf8_test.py  path_shorthand_test.py  pattern_selection_test.py  quoted_paths_test.py  show_json_test.py  show_test.py  skills_test.py  stage_test.py  subdirectory_test.py  unstage_test.py
tests/unit/: _patch_test.py  build_patch_test.py  conftest.py  hunk_test.py  lines_test.py  parse_diff_test.py  parse_line_spec_test.py  split_hunk_test.py  stage_hunk_test.py  stage_lines_test.py
tests/unit/_cli/: find_hunks_by_ids_test.py  keyboard_interrupt_test.py  normalize_path_arg_test.py
tests/unit/_hunk/: bare_header_test.py  extract_context_before_test.py  extract_file_path_test.py  id_test.py  no_newline_test.py  parse_diff_test.py  split_test.py  to_dict_test.py
tests/unit/_lines/: conftest.py  filter_test.py  parse_spec_test.py  resolve_matching_test.py
tests/unit/_skills/: load_skills_test.py  parse_frontmatter_test.py
tests/unit/_ui/: column_gap_test.py  print_error_test.py  safe_test.py  whole_file_label_test.py
tests/unit/hunk/: id_test.py  parse_diff_test.py
tests/unit/lines/: filter_test.py
tests/unit/patch/: build_test.py
