[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-hunk"
version = "0.1.0"
description = "Non-interactive git hunk staging for AI agents."
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Kentaro Wada"}]
dependencies = ["click>=8", "rich>=13"]

[project.scripts]
git-hunk = "git_hunk.cli:cli"

[dependency-groups]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.9",
    "ty>=0.0.28",
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "UP",  # pyupgrade
  "ANN",  # flake8-annotations
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
