[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-hunk"
description = "Non-interactive, programmatic git hunk staging with stable IDs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Kentaro Wada"}]
keywords = ["git", "staging", "hunk", "diff", "version-control", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = ["click>=8", "rich>=13"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/wkentaro/git-hunk"
Repository = "https://github.com/wkentaro/git-hunk"
Issues = "https://github.com/wkentaro/git-hunk/issues"

[project.scripts]
git-hunk = "git_hunk.cli:cli"

[tool.hatch.version]
path = "git_hunk/__init__.py"

[dependency-groups]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.9",
    "ty>=0.0.28",
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "UP",  # pyupgrade
  "ANN",  # flake8-annotations
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
