[build-system]
build-backend = "hatchling.build"
requires = ["hatch-vcs", "hatchling"]

[project]
authors = [{ name = "Kentaro Wada" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = ["click>=8", "rich>=13"]
description = "Non-interactive, programmatic git hunk staging with stable IDs."
dynamic = ["version"]
keywords = ["automation", "diff", "git", "hunk", "staging", "version-control"]
license = "MIT"
name = "git-hunk"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/wkentaro/git-hunk"
Issues = "https://github.com/wkentaro/git-hunk/issues"
Repository = "https://github.com/wkentaro/git-hunk"

[project.scripts]
git-hunk = "git_hunk._cli:cli"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
  "mdformat-frontmatter>=2.0.10",
  "mdformat>=0.7",
  "pytest-cov>=4",
  "pytest-xdist>=3.8.0",
  "pytest>=7",
  "ruff>=0.15.9",
  "taplo>=0.9",
  "ty>=0.0.28",
  "typos>=1.44",
  "yamlfix>=1.17",
]

[tool.ruff.lint]
select = [
  "ANN", # flake8-annotations
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
